syntax = "proto3";

package message;
option go_package = ".;api";

service MessageService {
  rpc Send(SendMessageRequest)returns (SendMessageResponse){}
  rpc Receive(ReceiveMessageRequest)returns (ReceiveMessageResponse){}
  rpc Connect(stream StreamMessage) returns(stream StreamMessage){}

}

message SendMessageRequest {
  Message message = 1;
  string channel = 2;
}

message SendMessageResponse {
  bool ok = 1;
}

message ReceiveMessageRequest {
  string channel = 1;
  string userName = 2;
}

message ReceiveMessageResponse {
  repeated Message messages = 1;
  bool ok = 2;
}

message StreamMessage {
  Message message = 1;
  string channel = 2;
  bool handshake = 3;
}

message Message {
  bytes content = 1;
  string userName = 2;
  int32 id = 3;
}

